objects/Dataloader_Success__c.object
<CustomObject>
    <description>This object stores the success and error record ids when the metrics object is updated through command line interface (for Global dealer program).</description>
    <fields>
        <fullName>Error_Record_ids__c</fullName>
        <label>Error Record ids</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Text__c</fullName>
        <label>Error Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Record_ids__c</fullName>
        <label>Success Record ids</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Text__c</fullName>
        <label>Success Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Dataloader Success</label>
    <nameField>
        <label>Dataloader Success Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dataloader Success</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>